// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`api projects should create a project 1`] = `
Array [
  Array [
    Object {
      ":authority": "kubernetes:6443",
      ":method": "post",
      ":path": "/apis/core.gardener.cloud/v1beta1/projects",
      ":scheme": "https",
      "authorization": "Bearer eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpZCI6ImZvb0BleGFtcGxlLm9yZyIsImlhdCI6MTU3NzgzNjgwMCwiYXVkIjpbImdhcmRlbmVyIl0sImdyb3VwcyI6WyJncm91cDEiXSwiZXhwIjozMTU1NzE2ODAwLCJqdGkiOiJqdGkifQ.iLqu05bZNRweB_7pr3cM6ZGO5gl2wYNf4d-hCazuo7o",
    },
    Object {
      "apiVersion": "core.gardener.cloud/v1beta1",
      "kind": "Project",
      "metadata": Object {
        "annotations": Object {
          "billing.gardener.cloud/costObject": "8888888888",
        },
        "name": "xyz",
        "resourceVersion": undefined,
      },
      "spec": Object {
        "createdBy": Object {
          "apiGroup": "rbac.authorization.k8s.io",
          "kind": "User",
          "name": "foo@example.org",
        },
        "description": "description",
        "namespace": "garden-xyz",
        "owner": undefined,
        "purpose": "purpose",
      },
    },
  ],
  Array [
    Object {
      ":authority": "kubernetes:6443",
      ":method": "get",
      ":path": "/apis/core.gardener.cloud/v1beta1/projects?watch=true&fieldSelector=metadata.name%3Dxyz",
      ":scheme": "https",
      "authorization": "Bearer eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJrdWJlcm5ldGVzL3NlcnZpY2VhY2NvdW50Iiwic3ViIjoic3lzdGVtOnNlcnZpY2VhY2NvdW50OmdhcmRlbjpkZWZhdWx0In0.-4rSuvvj5BStN6DwnmLAaRVbgpl5iCn2hG0pcqx0NPw",
    },
  ],
]
`;

exports[`api projects should create a project 2`] = `
Object {
  "data": Object {
    "createdBy": "foo@example.org",
    "description": "description",
    "owner": "foo@example.org",
    "purpose": "purpose",
  },
  "metadata": Object {
    "annotations": Object {
      "billing.gardener.cloud/costObject": "8888888888",
    },
    "name": "xyz",
    "namespace": "garden-xyz",
    "resourceVersion": "43",
    "role": "project",
  },
}
`;

exports[`api projects should delete a project 1`] = `
Array [
  Array [
    Object {
      ":authority": "kubernetes:6443",
      ":method": "get",
      ":path": "/apis/core.gardener.cloud/v1beta1/namespaces/garden-bar/shoots",
      ":scheme": "https",
      "authorization": "Bearer eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpZCI6ImZvb0BleGFtcGxlLm9yZyIsImlhdCI6MTU3NzgzNjgwMCwiYXVkIjpbImdhcmRlbmVyIl0sImdyb3VwcyI6WyJncm91cDEiXSwiZXhwIjozMTU1NzE2ODAwLCJqdGkiOiJqdGkifQ.iLqu05bZNRweB_7pr3cM6ZGO5gl2wYNf4d-hCazuo7o",
    },
  ],
  Array [
    Object {
      ":authority": "kubernetes:6443",
      ":method": "patch",
      ":path": "/apis/core.gardener.cloud/v1beta1/projects/bar",
      ":scheme": "https",
      "authorization": "Bearer eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpZCI6ImZvb0BleGFtcGxlLm9yZyIsImlhdCI6MTU3NzgzNjgwMCwiYXVkIjpbImdhcmRlbmVyIl0sImdyb3VwcyI6WyJncm91cDEiXSwiZXhwIjozMTU1NzE2ODAwLCJqdGkiOiJqdGkifQ.iLqu05bZNRweB_7pr3cM6ZGO5gl2wYNf4d-hCazuo7o",
      "content-type": "application/merge-patch+json",
    },
    Object {
      "metadata": Object {
        "annotations": Object {
          "confirmation.gardener.cloud/deletion": "true",
        },
      },
    },
  ],
  Array [
    Object {
      ":authority": "kubernetes:6443",
      ":method": "delete",
      ":path": "/apis/core.gardener.cloud/v1beta1/projects/bar",
      ":scheme": "https",
      "authorization": "Bearer eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpZCI6ImZvb0BleGFtcGxlLm9yZyIsImlhdCI6MTU3NzgzNjgwMCwiYXVkIjpbImdhcmRlbmVyIl0sImdyb3VwcyI6WyJncm91cDEiXSwiZXhwIjozMTU1NzE2ODAwLCJqdGkiOiJqdGkifQ.iLqu05bZNRweB_7pr3cM6ZGO5gl2wYNf4d-hCazuo7o",
    },
  ],
]
`;

exports[`api projects should delete a project 2`] = `
Object {
  "data": Object {
    "createdBy": "foo@example.org",
    "description": "bar-description",
    "owner": "bar@example.org",
    "purpose": "bar-purpose",
  },
  "metadata": Object {
    "annotations": Object {
      "confirmation.gardener.cloud/deletion": "true",
    },
    "name": "bar",
    "namespace": "garden-bar",
    "resourceVersion": "43",
    "role": "project",
  },
}
`;

exports[`api projects should patch a project 1`] = `
Array [
  Array [
    Object {
      ":authority": "kubernetes:6443",
      ":method": "patch",
      ":path": "/apis/core.gardener.cloud/v1beta1/projects/foo",
      ":scheme": "https",
      "authorization": "Bearer eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpZCI6ImZvb0BleGFtcGxlLm9yZyIsImlhdCI6MTU3NzgzNjgwMCwiYXVkIjpbImdhcmRlbmVyIl0sImdyb3VwcyI6WyJncm91cDEiXSwiZXhwIjozMTU1NzE2ODAwLCJqdGkiOiJqdGkifQ.iLqu05bZNRweB_7pr3cM6ZGO5gl2wYNf4d-hCazuo7o",
      "content-type": "application/merge-patch+json",
    },
    Object {
      "spec": Object {
        "description": "foobar",
      },
    },
  ],
]
`;

exports[`api projects should patch a project 2`] = `
Object {
  "data": Object {
    "createdBy": "foo@example.org",
    "description": "foobar",
    "owner": "bar@example.org",
    "purpose": "foo-purpose",
  },
  "metadata": Object {
    "annotations": Object {
      "billing.gardener.cloud/costObject": "9999999999",
    },
    "name": "foo",
    "namespace": "garden-foo",
    "resourceVersion": "43",
    "role": "project",
  },
}
`;

exports[`api projects should reject request with authorization error 1`] = `
Array [
  Array [
    Object {
      ":authority": "kubernetes:6443",
      ":method": "get",
      ":path": "/apis/core.gardener.cloud/v1beta1/projects/foo",
      ":scheme": "https",
      "authorization": "Bearer eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpZCI6ImJhekBleGFtcGxlLm9yZyIsImlhdCI6MTU3NzgzNjgwMCwiYXVkIjpbImdhcmRlbmVyIl0sImV4cCI6MzE1NTcxNjgwMCwianRpIjoianRpIn0.FjCv0aM0u5SpfHVemW_p-HnVVyr7Vg53ul5ukPSbNbA",
    },
  ],
]
`;

exports[`api projects should reject request with authorization error 2`] = `
Object {
  "code": 403,
  "details": Any<Object>,
  "message": "Forbidden",
  "reason": "Forbidden",
  "status": "Failure",
}
`;

exports[`api projects should return all projects 1`] = `
Array [
  Array [
    Object {
      ":authority": "kubernetes:6443",
      ":method": "post",
      ":path": "/apis/authorization.k8s.io/v1/selfsubjectaccessreviews",
      ":scheme": "https",
      "authorization": "Bearer eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpZCI6ImFkbWluQGV4YW1wbGUub3JnIiwiaWF0IjoxNTc3ODM2ODAwLCJhdWQiOlsiZ2FyZGVuZXIiXSwiZXhwIjozMTU1NzE2ODAwLCJqdGkiOiJqdGkifQ.PwFHRt9M8dJf8YcCVlbyH4xu2QpL3jBI1oEC_Zdmtzk",
    },
    Object {
      "apiVersion": "authorization.k8s.io/v1",
      "kind": "SelfSubjectAccessReview",
      "spec": Object {
        "nonResourceAttributes": undefined,
        "resourceAttributes": Object {
          "group": "",
          "resource": "secrets",
          "verb": "get",
        },
      },
    },
  ],
]
`;

exports[`api projects should return all projects 2`] = `
Array [
  Object {
    "data": Object {
      "createdBy": "foo@example.org",
      "description": "foo-description",
      "owner": "bar@example.org",
      "purpose": "foo-purpose",
    },
    "metadata": Object {
      "annotations": Object {
        "billing.gardener.cloud/costObject": "9999999999",
      },
      "name": "foo",
      "namespace": "garden-foo",
      "resourceVersion": "42",
      "role": "project",
    },
  },
  Object {
    "data": Object {
      "createdBy": "foo@example.org",
      "description": "bar-description",
      "owner": "bar@example.org",
      "purpose": "bar-purpose",
    },
    "metadata": Object {
      "name": "bar",
      "namespace": "garden-bar",
      "resourceVersion": "42",
      "role": "project",
    },
  },
  Object {
    "data": Object {
      "createdBy": "new@example.org",
      "owner": "new@example.org",
    },
    "metadata": Object {
      "name": "GroupMember1",
      "namespace": "garden-GroupMember1",
      "resourceVersion": "42",
      "role": "project",
    },
  },
  Object {
    "data": Object {
      "createdBy": "new@example.org",
      "owner": "new@example.org",
    },
    "metadata": Object {
      "name": "GroupMember2",
      "namespace": "garden-GroupMember2",
      "resourceVersion": "42",
      "role": "project",
    },
  },
  Object {
    "data": Object {
      "createdBy": "admin@example.org",
      "description": "secret-description",
      "owner": "admin@example.org",
      "purpose": "secret-purpose",
    },
    "metadata": Object {
      "name": "secret",
      "namespace": "garden-secret",
      "resourceVersion": "42",
      "role": "project",
    },
  },
  Object {
    "data": Object {
      "createdBy": "admin@example.org",
      "description": "trial-description",
      "owner": "admin@example.org",
      "purpose": "trial-purpose",
    },
    "metadata": Object {
      "annotations": Object {
        "billing.gardener.cloud/costObject": "1234567890",
      },
      "name": "trial",
      "namespace": "garden-trial",
      "resourceVersion": "42",
      "role": "project",
    },
  },
]
`;

exports[`api projects should return the foo project 1`] = `
Array [
  Array [
    Object {
      ":authority": "kubernetes:6443",
      ":method": "get",
      ":path": "/apis/core.gardener.cloud/v1beta1/projects/foo",
      ":scheme": "https",
      "authorization": "Bearer eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpZCI6ImZvb0BleGFtcGxlLm9yZyIsImlhdCI6MTU3NzgzNjgwMCwiYXVkIjpbImdhcmRlbmVyIl0sImdyb3VwcyI6WyJncm91cDEiXSwiZXhwIjozMTU1NzE2ODAwLCJqdGkiOiJqdGkifQ.iLqu05bZNRweB_7pr3cM6ZGO5gl2wYNf4d-hCazuo7o",
    },
  ],
]
`;

exports[`api projects should return the foo project 2`] = `
Object {
  "data": Object {
    "createdBy": "foo@example.org",
    "description": "foo-description",
    "owner": "bar@example.org",
    "purpose": "foo-purpose",
  },
  "metadata": Object {
    "annotations": Object {
      "billing.gardener.cloud/costObject": "9999999999",
    },
    "name": "foo",
    "namespace": "garden-foo",
    "resourceVersion": "42",
    "role": "project",
  },
}
`;

exports[`api projects should return three projects 1`] = `
Array [
  Array [
    Object {
      ":authority": "kubernetes:6443",
      ":method": "post",
      ":path": "/apis/authorization.k8s.io/v1/selfsubjectaccessreviews",
      ":scheme": "https",
      "authorization": "Bearer eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpZCI6ImZvb0BleGFtcGxlLm9yZyIsImlhdCI6MTU3NzgzNjgwMCwiYXVkIjpbImdhcmRlbmVyIl0sImdyb3VwcyI6WyJncm91cDEiXSwiZXhwIjozMTU1NzE2ODAwLCJqdGkiOiJqdGkifQ.iLqu05bZNRweB_7pr3cM6ZGO5gl2wYNf4d-hCazuo7o",
    },
    Object {
      "apiVersion": "authorization.k8s.io/v1",
      "kind": "SelfSubjectAccessReview",
      "spec": Object {
        "nonResourceAttributes": undefined,
        "resourceAttributes": Object {
          "group": "",
          "resource": "secrets",
          "verb": "get",
        },
      },
    },
  ],
]
`;

exports[`api projects should return three projects 2`] = `
Array [
  Object {
    "data": Object {
      "createdBy": "foo@example.org",
      "description": "foo-description",
      "owner": "bar@example.org",
      "purpose": "foo-purpose",
    },
    "metadata": Object {
      "annotations": Object {
        "billing.gardener.cloud/costObject": "9999999999",
      },
      "name": "foo",
      "namespace": "garden-foo",
      "resourceVersion": "42",
      "role": "project",
    },
  },
  Object {
    "data": Object {
      "createdBy": "foo@example.org",
      "description": "bar-description",
      "owner": "bar@example.org",
      "purpose": "bar-purpose",
    },
    "metadata": Object {
      "name": "bar",
      "namespace": "garden-bar",
      "resourceVersion": "42",
      "role": "project",
    },
  },
  Object {
    "data": Object {
      "createdBy": "new@example.org",
      "owner": "new@example.org",
    },
    "metadata": Object {
      "name": "GroupMember1",
      "namespace": "garden-GroupMember1",
      "resourceVersion": "42",
      "role": "project",
    },
  },
]
`;

exports[`api projects should timeout when creating a project 1`] = `
Array [
  Array [
    Object {
      ":authority": "kubernetes:6443",
      ":method": "post",
      ":path": "/apis/core.gardener.cloud/v1beta1/projects",
      ":scheme": "https",
      "authorization": "Bearer eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpZCI6ImZvb0BleGFtcGxlLm9yZyIsImlhdCI6MTU3NzgzNjgwMCwiYXVkIjpbImdhcmRlbmVyIl0sImdyb3VwcyI6WyJncm91cDEiXSwiZXhwIjozMTU1NzE2ODAwLCJqdGkiOiJqdGkifQ.iLqu05bZNRweB_7pr3cM6ZGO5gl2wYNf4d-hCazuo7o",
    },
    Object {
      "apiVersion": "core.gardener.cloud/v1beta1",
      "kind": "Project",
      "metadata": Object {
        "annotations": Object {
          "billing.gardener.cloud/costObject": "8888888888",
        },
        "name": "my-project",
        "resourceVersion": undefined,
      },
      "spec": Object {
        "createdBy": Object {
          "apiGroup": "rbac.authorization.k8s.io",
          "kind": "User",
          "name": "foo@example.org",
        },
        "description": "description",
        "namespace": "garden-my-project",
        "owner": undefined,
        "purpose": "purpose",
      },
    },
  ],
  Array [
    Object {
      ":authority": "kubernetes:6443",
      ":method": "get",
      ":path": "/apis/core.gardener.cloud/v1beta1/projects?watch=true&fieldSelector=metadata.name%3Dmy-project",
      ":scheme": "https",
      "authorization": "Bearer eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJrdWJlcm5ldGVzL3NlcnZpY2VhY2NvdW50Iiwic3ViIjoic3lzdGVtOnNlcnZpY2VhY2NvdW50OmdhcmRlbjpkZWZhdWx0In0.-4rSuvvj5BStN6DwnmLAaRVbgpl5iCn2hG0pcqx0NPw",
    },
  ],
]
`;

exports[`api projects should timeout when creating a project 2`] = `
Object {
  "code": 504,
  "details": Any<Object>,
  "message": "The condition for \\"projects\\" was not met within 10 ms",
  "reason": "Gateway Timeout",
  "status": "Failure",
}
`;

exports[`api projects should update a project 1`] = `
Array [
  Array [
    Object {
      ":authority": "kubernetes:6443",
      ":method": "patch",
      ":path": "/apis/core.gardener.cloud/v1beta1/projects/foo",
      ":scheme": "https",
      "authorization": "Bearer eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpZCI6ImZvb0BleGFtcGxlLm9yZyIsImlhdCI6MTU3NzgzNjgwMCwiYXVkIjpbImdhcmRlbmVyIl0sImdyb3VwcyI6WyJncm91cDEiXSwiZXhwIjozMTU1NzE2ODAwLCJqdGkiOiJqdGkifQ.iLqu05bZNRweB_7pr3cM6ZGO5gl2wYNf4d-hCazuo7o",
      "content-type": "application/merge-patch+json",
    },
    Object {
      "metadata": Object {
        "annotations": Object {
          "billing.gardener.cloud/costObject": "8888888888",
        },
      },
      "spec": Object {
        "description": "description",
        "owner": Object {
          "apiGroup": "rbac.authorization.k8s.io",
          "kind": "User",
          "name": "baz@example.org",
        },
        "purpose": "purpose",
      },
    },
  ],
]
`;

exports[`api projects should update a project 2`] = `
Object {
  "data": Object {
    "createdBy": "foo@example.org",
    "description": "description",
    "owner": "baz@example.org",
    "purpose": "purpose",
  },
  "metadata": Object {
    "annotations": Object {
      "billing.gardener.cloud/costObject": "8888888888",
    },
    "name": "foo",
    "namespace": "garden-foo",
    "resourceVersion": "43",
    "role": "project",
  },
}
`;
